--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,18 @@
-name: structure-based-admet-prediction
+name: structure-based-admet-prediction2
 channels:
   - conda-forge
+  - schrodinger
 dependencies:
-  - python=3.9
-  - ipython=7.30.1
+  - ipython=8.12.0
   - jupyter=1.0.0
+  - mdanalysis=2.4.3
+  - numpy=1.24.2
+  - openbabel=3.1.1
+  - pdbfixer=1.8.1
+  - prolif=1.1.0
+  - py3dmol=2.0.1.post1
+  - pymol=2.5.5
+  - python=3.9
+  - rdkit=2022.09.4
   - scikit-learn=1.2.2
-  - openbabel
-  - numpy
-  - vina
+  - vina=1.2.3
